# neuroEncoders

./: .gitignore  .pre-commit-config.yaml  README.md  addTsd.m  addTsdFeature.sh  createOpenEphysTemplateFromJson.sh  encodeByUnit.py  environment.yml  extractSWR.m  extractTsd.m  extractTsd_withimportdata.m  findBestHP.py  fullEncoder.py  getRipple.sh  getTsdFeature.sh  importdata.m  install  install.sh  mlog.out  neuroEncoder  neuroEncoder (copy)  openEphysLoadExample.xml  openEphysLoadExampleDefaultFilter.xml  pyproject.toml  requirements.txt  runAllMice.py  test  test.py  test.py~  testBasile  test_script.py  version_desc.txt
NoRecurrentNetwork/: denseFromConvNetwork.py  testdenseFromConvNet.py
SimpleBayes/: butils.py  decodebayes.py  simpleBayesTest.py
decoder/: .gitignore  decode.py  decodeTraining.py
fullEncoder/: an_network.py  datasetMaker.py  mobsEncoder.py  nnTraining.py  nnUtils.py  printResults.py  tensorflow.rnn.print.py  testThibaultCode.py
fullEncoder_v1/: extractSleepState.m  extractTsd.m  getRipple.sh  getSleepState.sh  getTsdFeature.sh  identityNetwork.py  nnNetwork2.py  nnUtils.py  printResults.py  requirements.txt  testPierrev1.py
fullEncoder_v2/: nnNetwork2.py  nnTraining.py  nnUtils.py  printResults.py  testPierre.py
fullEncoder_v3/: nnNetwork2.py  nnUtils.py  testPierrev3.py
importData/: ImportClusters.py  __init__.py  compareSpikeFiltering.py  epochs_management.py  gui_elements.py  import_clusters.py  rawDataParser.py  rawdata_parser.py
importData/JuliaData/: Project.toml  executeFilter.sh  executeFilter_singleSpike.sh  executeFilter_stride.sh  juliaDataParser.py  juliaScript.jl  spikeFilter.jl  spikeFilter_singleSpikeDataset.jl  spikeFilter_withStride.jl
importData/juliaData/: Manifest.toml  executeFilter_singleSpike.sh  executeFilter_stride.sh  julia_data_parser.py  spikeFilter_singleSpikeDataset.jl  spikeFilter_withStride.jl
neuroencoders/: __init__.py
neuroencoders/decoder/: __init__.py  decode.py
neuroencoders/fullEncoder/: __init__.py  an_network.py  an_network_torch.py  nnUtils.py  nnUtils_torch.py
neuroencoders/importData/: __init__.py  compareSpikeFiltering.py  epochs_management.py  gui_elements.py  import_clusters.py  rawdata_parser.py
neuroencoders/openEphysExport/: __init__.py  create_json_offline.sh  generate_json.py
neuroencoders/resultAnalysis/: __init__.py  hyper_paper_figures.py  old_code.py  paper_figures.py  paper_figures_sleep.py  print_results.py
neuroencoders/simpleBayes/: __init__.py  butils.py  decode_bayes.py  decode_bayes_legacy.py
neuroencoders/transformData/: __init__.py  linearizer.py
neuroencoders/utils/: MOBS_Functions.py  PathForExperiments.py  PlaceField_dB.py  README.md  SpikeLoading.py  __init__.py  all_with_spike_interface.py  func_wrappers.py  global_classes.py  management.py  runSorting.py  spectro_viewer.py  test.py  viewer_with_spike_interface.py  viz_params.py  wrappers.py
notebooks/: Compare Bayes.ipynb  EphyViewer - Jeudi 1912.ipynb  NotebookKarim.ipynb  NotebookKarimSingleMouse.ipynb  ResultsLoading.ipynb  ResultsLoadingDat.ipynb  SpikeLoading.ipynb  SpikeLussac.ipynb  arsenii spikesorting-small.ipynb  arsenii spikesorting-smallGROUPS.ipynb  arsenii spikesorting.ipynb  debug.ipynb  notebook_resultsLoader_ALL.py
openEphysExport/: create_json.sh  generate_json.py  openEphysExport.py
openEphysExport/xmls/: openEphysLoadExample.xml  openEphysLoadExample_df.xml  openEphysLoadExample_offline_df.xml
resultAnalysis/: CNN_output.py  NNpredAnalysis.py  hyper_paper_fugures.py  moviePred.py  old_code.py  paperFigure_sleep.py  paperFigures.py  paper_figures.py  paper_figures_sleep.py  performancePlots.py  print_results.py
simpleBayes/: butils.py  decode_bayes.py
src/: requirements.txt
tests/: conftest.py  test_bayes.py  test_butils.py  test_data_helper.py  test_device_management.py  test_epochs_management.py  test_losses.py  test_losses_tf.py  test_models.py  test_plotting.py
tests/filesForTest/: test.xml
transformData/: interpolationKmeanCenter1.csv  interpolationKmeanCenter2.csv  linearizer.py
transformerNetwork/: nnUtils.py  outputLanguageModel.py  testTransformer.py  transformerNetwork.py  waveFormConvNet.py  waveformTranslator.py
tsdPackage/@intervalSet/: FirstTime.m  Stop.m  Stop.m~  and.m  diff.m  diff.m~  dropLongIntervals.m  inInterval.m  intersect.m  intervalSet.m  or.m  set.m  shift.m  union.m  union.m~
tsdPackage/@ts/: Data.m  size.m
tsdPackage/@tsd/: Data.m  EndTime.m  Restrict.m  RestrictThreshold.m  StartTime.m  compatible_ts.m  interp_missing.m  intervalCount.m  intervalCount.nrs  intervalCount.xml  intervalMean.m  intervalSplit.m  mean.m  median_dt.m  minus.m  peaks_tsd.m  rdivide.m  setName.m  smooth.m  thresholdHysteresis.m  thresholdIntervals.m  timeDeriv.m  toIntervalSet.m  triggeredDataMat.m  triggeredMean.m  tsd.m  unique.m
tsdPackage/@tsdArray/: MakeQTrig.m  MakeQfromS.m  RRestrict.m  Restrict.m  length.m  size.m  tsdArray.m
tsdPackage/@units/: units.m
tsdPackage/Graphics/: RasterPETH.m  RasterPETH_order (Copie en conflit de mobsteam mobs 2020-11-17).m  RasterPETH_order.m  RasterPETH_order.m~  RasterPlot (Copie en conflit de mobsteam mobs 2016-08-17).m  RasterPlot.m  RasterPlot_SB.m  circlePlot.m  plotTS.m
tsdPackage/UtilsCompute/: AlignNext.mexw64  CrossCorr (Copie en conflit de karim benchenane 2016-11-04).m  CrossCorr (Copie en conflit de mobsteam mobs 2020-11-17).mexmaci64  CrossCorr.m  CrossCorr.mexa64  CrossCorr.mexglx  CrossCorr.mexmaci64  CrossCorr.mexw64  Histogram_intervals.mexmaci64  binsearch_floor.mexmaci64  hist2.m  hist2d.m  hist2dv2.m  idx_intervals.mexa64
tsdPackage/UtilsProgram/: getOpt (Copie en conflit de mobsteam mobs 2016-08-17).m  (+1 more)
unitClassifier/: bayesTraining.py  bayesUtils.py  bayesianDecoder.py  mobs_networkbuilding.py  unitClassifier.py
utils/: MOBS_Functions.py  NAS.py  PathForExperiments.py  PlaceField_dB.py  Spike.py  SpikeLoading.py  __init__.py  all_with_spike_interface.py  global_classes.py  management.py  runSorting.py  spectro_viewer.py  test.py  viewer_with_spike_interface.py  viz_params.py
(+172 files in other folders)
