[project]
name = "neuroencoders"
dynamic = ["version"]
description = "Neuroencoders is a Python package for the analysis of neural data, including encoding models, decoding models, and visualization tools."
authors = [
    { name = "Dima Bryzgalov", email = "bryzgalovdm@gmail.com" },
    { name = "Théotime de Charrin", email = "theotime.decharrin@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.7.3",
    "cmcrameri>=1.9",
    "cucim-cu12>=25.10",
    "cudf-cu12>=25.10",
    "cugraph-cu12>=25.10",
    "cuml-cu12>=25.10",
    "cuvs-cu12>=25.10",
    "dask-cudf-cu12>=25.10",
    "denseweight>=0.1.2",
    "dill>=0.3.9",
    "ffmpeg>=1.4",
    "graphviz>=0.20.3",
    "h5py>=3.13.0",
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "lxml>=5.3.2",
    "mat73>=0.65",
    "matplotlib>=3.6.2",
    "numba>=0.60.0",
    "numpy<=2",
    "nvidia-cudnn-cu12~=8.9",
    "nx-cugraph-cu12>=25.10",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.1.0",
    "parameterized>=0.9.0",
    "polars>=1.30.0",
    "pre-commit>=4.2.0",
    "pydot>=3.0.4",
    "pydotplus>=2.0.2",
    "pykeops>=2.3",
    "pylibraft-cu12>=25.10",
    "pynapple>=0.9.0",
    "pyqt5>=5.15.11",
    "pytest>=9.0.2",
    "pyyaml>=6.0.2",
    "raft-dask-cu12>=25.10",
    "scikeras>=0.12.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "setuptools==78.1.1",
    "shapely>=2.1.0",
    "statannotations>=0.7.2",
    "statsmodels>=0.14.0",
    "tables>=3.10.1",
    "tbb>=2022.3.0",
    "tbb-devel>=2022.3.0",
    "tensorflow",
    "termplotlib>=0.3.9",
    "tqdm>=4.67.1",
    "umap-learn[plot]>=0.5.9.post2",
    "wandb>=0.20.1",
    "xlsxwriter>=3.2.5",
]

[dependency-groups]
dev = [
    "bokeh>=3.8.1",
    "dash>=3.1.1",
    "ephyviewer>=1.7.0",
    "imageio[ffmpeg,pyav]>=2.37.0",
    "keras-tuner>=1.4.8",
    "kilosort>=4.1.1",
    "memory-profiler>=0.61.0",
    "neuroencoders",
    "openpyxl>=3.1.5",
    "pandas>=2.1.0",
    "pillow>=12.0.0",
    "plotly>=6.2.0",
    "psutil>=7.0.0",
    "pympler>=1.1",
    "requests>=2.32.4",
    "ruff>=0.11.8",
    "scipy>=1.15.3",
    "spikeinterface[full]>=0.103.0",
    "xlsxwriter>=3.2.5",
]

[tool.ruff]
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.ipynb",
]
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
case-sensitive = true

# Update: Treat current project as a python package.
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["neuroencoders"]

[tool.uv.sources]
neuroencoders = { workspace = true }

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
